cpp/test/FreezeScript/dbmap/fail/04_old.ice
module Test
{

enum E { E1, E2, E3 };

struct S1
{
    float m1;
    long m2;
    string m3;
    E m4;
};

sequence<int> Seq1;
dictionary<byte, int> D1;

interface I {};

class C1 implements I
{
    int c1m1;
    int c1m2;
    int c1m3;
    int c1m4;
    int c1m5;
    int c1m6;
    int c1m7;
    int c1m8;
    int c1m9;
    int c1m10;
    int c1m11;
    int c1m12;
    int c1m13;
    int c1m14;
    int c1m15;
    int c1m16;
};

class C2 extends C1
{
    int c2m1;
    int c2m2;
    int c2m3;
    int c2m4;
    int c2m5;
    int c2m6;
    int c2m7;
    int c2m8;
    int c2m9;
    int c2m10;
    int c2m11;
    int c2m12;
    int c2m13;
    int c2m14;
    int c2m15;
    int c2m16;
};

struct S2
{
    int m1;
    int m2;
    int m3;
    int m4;
    int m5;
    int m6;
    int m7;
    int m8;
    int m9;
    int m10;
    int m11;
    int m12;
    int m13;
    int m14;
    int m15;
    int m16;
};

};
